<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_object_tracker</name>
  <version>0.0.0</version>
  <description>The turtlebot3_object_tracker package</description>
  <maintainer email="amir.intelli@gmail.com">amirint</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>  <!-- 추가: message_generation 의존성 추가 -->
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>  <!-- 추가: message_runtime 의존성 추가 -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>  <!-- 추가: message_runtime 의존성 추가 -->
</package>

